Virtualmin API scripts run via HTTP are now executed within the same process, which should make them about twice as fast.
Alias mail domains can now be implemented by copying virtusers into the alias rather than using a catchall. Under Postfix this allows email to invalid addresses in the alias domain to be rejected at the SMTP level. The default for this can be changed on the Server Templates page under Mail for domain, and it can be changed for existing domains on the Edit Virtual Server page.
Added the modify-aliascopy.pl command-line program to change the email aliasing mode (from catchall to copying virtusers).
Added --mailfiles flag to backup-domain.pl and restore-domain.pl, to save and restore inboxes outside of the home directory.
Shells for mailboxes and domain owners are now configured on the new Custom Shells page, linked under System Customization on the left menu. This allows you to define as many different shells as you like, for access levels like email only, FTP and SCP only. When editing mailboxes or domain owner limits, you can then select one of the defined shells.
Added the list-available-shells.pl command-line program, and added the --shell parameter to create-user.pl and modify-user.pl. Also updated modify-limits.pl so that the --shell option can specify any defined shell.
The size of the Webmin server process can be traded off against the speed of Virtualmin by adjusting the amount of library pre-loading done, using a new setting on the Module Config page.
Added the test-smtp.pl command for validating mail server relaying and logins.
---- Changes since 3.49 ----
Upgraded the SquirrelMail script installer to version 1.4.13.
Upgraded the ZenPhoto installer to version 1.1.3, and made it more automated.
Only run clamscan once to verify that it is working, rather than after every configuration change.
Include the total backup time in the scheduled backup email.